-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Atlas Streams
-
Fully Compatible
-
Sprint 60
-
None
-
None
-
None
-
None
-
None
-
None
-
None
We see transient errors in production like "command update requires authentication: generic server error". These go away on retry. This is likely something wrong with our system.
While customers can choose the role a stream processor operators as on their database, these particular auth errors are not caused by a customer's auth configuration.
We should classify these errors as internal so they are always retried. We can specifically look for the string "requires authentication: generic server error" to distinguish this case from the the genuine "misconfigured auth role" user error.
| 66cd95768e14a194ae49d8a7 | 66c4ab856e6f88766698720c | $merge to MC-MetaData.segmentDefinitionsAudit failed: command update requires authentication: generic server error | 422 | 1 |
- mentioned in
-
Page Loading...