SERVER-94877: categorize transient auth errors as internal error (#28067)